# AGV-Project_Automama-Software_stack

./: README.md
automama/: package.xml  setup.py  stereo.rviz  sust_campus_map.html
automama/arduino codes/Automama_control_test_DualCore/Automama_control_test/: Automama_control_test.ino  brake_operation.ino  manual_steering.ino  preference_manager.ino  read_data.ino  serial_commmunication.ino  steering_control.ino  throttle.ino
automama/automama/callab_data/cam_matrix_1920_1080/: camera_calibration0.yaml  camera_calibration1.yaml  stereo_calibration.yaml
automama/automama/callab_data/cam_matrix_960_576/: camera_calibration0.yaml  camera_calibration1.yaml  stereo_calib_data.npz  (+1 more)
automama/automama/control/: README.md  manual_control.py  py_controller.py
automama/automama/interface/: data_logger.py
automama/automama/navigation/: costmap.py  image_gray.npy  rt_costmap.py
automama/automama/perception/: README.md  all_mask.py  callibrate_store.py  csi_cam_test.py  cuda_rectify_remap.py  depth.py  depth2.py  dummy_img.py  live_cam_stream.py  rectify.py  semantic_seg.py  stereodaddy.py  stereodaddy3.py  stereodaddy4.py  stereodaddy5.py  stereodaddy6.py  stereodaddy7.py  yolomodelget.py  yolotest.py  zero_copy_rectify_test.py  zero_copy_rectify_test3.py
automama/daddyutils/: navstack.py  navstack12.py  navstack13.py  navstack2.py  navstack4.py  navstack8.py  occupancy2.py  occupancy3.py  occupancy4.py  occupancy5.py  redmask.py  tensorrt_infer3.py  warp_utils.py
automama/launch/: backened_check.py  cam_node_runner.launch.py  isaac_ess_stereo.launch.py
(+70 files in other folders)
