<?xml version="1.0"?>
<package format="3">
  <name>automama</name>
  <version>0.0.0</version>
  <description>Camera publisher and camera info publisher for CSI cameras (Python package).</description>
  <maintainer email="deen@todo.todo">deen</maintainer>
  <license>MIT</license>

  <!-- Buildtool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
